--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "contentful": "^11.2.0",
+    "moment": "^2.30.1",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
